infra/k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: notification:latest
          imagePullPolicy: "Never"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv-cl-ip
spec:
  selector:
    app: notification
  ports:
    - name: notification
      protocol: TCP
      port: 4105
      targetPort: 4105
