infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: payment:latest
          imagePullPolicy: "Never"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv-cl-ip
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 4104
      targetPort: 4104
