infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: query:latest
          imagePullPolicy: "Never"
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv-cl-ip
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4109
      targetPort: 4109
