infra/k8s/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: pubpolis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv-cl-ip
                port:
                  number: 3000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv-cl-ip
                port:
                  number: 4102
          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: movies-srv-cl-ip
                port:
                  number: 4101
          - path: /genres
            pathType: Prefix
            backend:
              service:
                name: genres-srv-cl-ip
                port:
                  number: 4100
          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking-srv-cl-ip
                port:
                  number: 4103
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-srv-cl-ip
                port:
                  number: 4104
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-srv-cl-ip
                port:
                  number: 4105
          - path: /getcatalog
            pathType: Prefix
            backend:
              service:
                name: query-srv-cl-ip
                port:
                  number: 4109
          - path: /getbooking
            pathType: Prefix
            backend:
              service:
                name: query-srv-cl-ip
                port:
                  number: 4109
